2013-05-31  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/57478
	PR tree-optimization/57453
	* tree-vect-slp.c (vect_bb_slp_scalar_cost): Uses in PHI nodes
	are life as well.

2013-05-31  Kaushik Phatak  <kaushik.phatak@kpitcummins.com>

	* config/rl78/rl78.md (mulqi3,mulhi3): New define_expands.
	(*mulqi3_rl78,*mulhi3_rl78,*mulhi3_g13): New define_insns.

2013-05-30  Tobias Burnus  <burnus@net-b.de>
	    Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR middle-end/57073
	* tree-ssa-math-opts.c (execute_cse_sincos): Optimize
	powi (-1.0, k) to (k & 1) ? -1.0 : 1.0.

2013-05-30  Steven Bosscher  <steven@gcc.gnu.org>

	* rtlanal.c (tablejump_p): Expect table and label to be adjacent.

2013-05-30  Vladimir Makarov  <vmakarov@redhat.com>

	* target.def (register_usage_leveling_p): New hook.
	* targhooks.c (default_register_usage_leveling_p): New.
	* targhooks.h (default_register_usage_leveling_p): New prototype.
	* lra-assigns.c (register_usage_leveling_p): Use the hook.
	* doc/tm.texi.in (TARGET_REGISTER_USAGE_LEVELING_P): New hook.
	* doc/tm.texi: Update.
	* config/i386/i386.c (TARGET_REGISTER_USAGE_LEVELING_P): Define.

2013-05-30  Ian Bolton  <ian.bolton@arm.com>

	* config/aarch64/aarch64.md (insv<mode>): New define_expand.
	(*insv_reg<mode>): New define_insn.

2013-05-30  Joern Rennecke <joern.rennecke@embecosm.com>

	PR rtl-optimization/57439
	* postreload.c (move2add_valid_value_p): Check that we have
	a zero subreg_regno_offset when accessing the register in
	the requested mode.

2013-05-30  Yuri Rumyantsev  <yuri.s.rumyantsev@intel.com>
	    Igor Zamyatin  <igor.zamyatin@intel.com>

	Silvermont (SLM) architecture pipeline model, tuning and
	insn selection.
	* config.gcc: Add slm config options and target.

	* config/i386/slm.md: New.

	* config/i386/driver-i386.c (host_detect_local_cpu): Check movbe.

	* gcc/config/i386/i386-c.c (ix86_target_macros_internal):  New case
	PROCESSOR_SLM.
	(ix86_target_macros_internal): Likewise.
